Use getLast instead of access by index (#2871)